--- a/reports/dynamic.time.warping.Rmd
+++ b/reports/dynamic.time.warping.Rmd
@@ -4,10 +4,22 @@ title: "Dynamic Time Warping"
 
 ```{r, setup, include=FALSE}
 project.root = rprojroot::find_rstudio_root_file()
-knitr::opts_knit$set(root.dir = project.root)
+knitr::opts_knit$set(root.dir = project.root) # for future chunks
+setwd(project.root) # for this chunk
+source('./scripts/analysis/010-run-model-batches.R')
+source("src/import_experiment.R")
+EXPERIMENTS <- list_experiments() %>% map(import_experiment)
 ```
 
-Behavior versus interference simplex model for stretched timbre.
+Behavior versus interference simplex model for harmonic dyads.
+
+```{r}
+HARMONIC_DYADS <- EXPERIMENTS$`Harmonic dyads (3 dB roll-off)`
+behaviour.harmonic = HARMONIC_DYADS$behaviour
+interference.simplex.harmonic = HARMONIC_DYADS$models$`Hutchinson & Knopoff (1978)`
+periodicity.duplex.harmonic = HARMONIC_DYADS$models$`mami.codi.m.1.t.1.h.2.l.-1.r.73.5759`
+```
+
 
 ```{r }
 source('./explorations/code/utils.R')
